infrastructure/k8s/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sante
  labels:
    app: sante-application
    environment: production
