infrastructure/k8s/10-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: frontend-redirect-https
  namespace: sante
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-ingressroute
  namespace: sante
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`santeapp.serveirc.com`)
      kind: Rule
      middlewares:
        - name: frontend-redirect-https
      services:
        - name: frontend
          port: 3000
    - match: Host(`santeapp.serveirc.com`) && PathPrefix(`/api`)
      kind: Rule
      middlewares:
        - name: frontend-redirect-https
      services:
        - name: backend
          port: 8000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-ingressroute-secure
  namespace: sante
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`santeapp.serveirc.com`)
      kind: Rule
      services:
        - name: frontend
          port: 3000
    - match: Host(`santeapp.serveirc.com`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: backend
          port: 8000
  tls: {}
